--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "expect-to-be-a-promise",
   "version": "1.0.0",
-  "description": "A matcher to assert the return value of a function is a thenable.",
+  "description": "A chai matcher to assert the return value of a function is a thenable.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
